--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -267,7 +267,7 @@ label {
   color: $element-font-color;
   outline: none;
   
-  span:first-of-type {
+  > span:first-of-type {
     padding-right: $element-indent;
   }
 
@@ -371,7 +371,7 @@ label {
   color: $element-font-color;
   outline: none;
 
-  span:first-of-type {
+  > span:first-of-type {
     padding-right: $element-indent;
   }
 
