--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -1,118 +1,95 @@
-// Variables
+//////////////////////////// layout ////////////////////////////
+// header
+$layout-header-height:                       3.125rem; // 50px
+$layout-header-font-size:                    $font-size-base;
+$layout-header-font-color:                   $white;
+$layout-header-font-weight:                  $font-weight-medium;
+$layout-header-bg-color:                     $point-blue;
 
-// label
-$label-point-font-color:        $hover-blue;
-$label-ghost-font-color:        $white;
+// main
+$layout-main-bg-color:                       $light-gray;
 
-// span
-$span-font-size:               1rem; // 16px
-$span-font-weight:             $font-weight-regular; // regular
+// main > drawing-board
+$drawing-board-width:                        60rem; // 960px
+$drawing-board-bg-color:                     $white;
+$drawing-board-border:                       0.0625rem solid $line-gray; // 1px
+$drawing-board-box-shadow:                   0 0 0.9375rem 0 rgba(204, 206, 209, 0.3); // 흐림 15px,  $pressed-gray, 불투명도 30%;
+$drawing-board-margin:                       7.5rem 0; // 120px 0
+$drawing-board-padding:                      6.25rem 4.688rem; // 100px 75px;
 
+// properties header
+$layout-properties-header-height:            2.5rem; // 40px
+$layout-properties-header-font-size:         $font-size-base;
+$layout-properties-header-font-color:        $white;
+$layout-properties-header-font-weight:       $font-weight-medium;
+$layout-properties-header-bg-color:          $hover-blue;
+
+// properties
+$layout-properties-width:                     18.75rem; // 300px
+$layout-properties-bg-color:                  $white;
+$layout-properties-border:                    0.0625rem solid $line-gray; // 1px
+$layout-properties-box-shadow:                -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
+
+//////////////////////////// form ////////////////////////////
+$form-asset-path:                             "../media/icons/form";
+$column-row:                                  12;  // 폼을 나누는 갯수
+
+////////////////////////// elements /////////////////////////
 // table
-$table-border-color:           $line-gray;
+$table-border-color:                          $line-gray;
 
-// image
-$img-font-size:                 16px;
-$img-font-weight:               400; // regular
-$img-line-height:               24px;
-$img-placeholder-color:         $gray;
-$img-border:                    0.0625rem solid $line-gray;
-$img-bg-color:                  $light-gray;
-$img-pressed-bg-color:          $white;
+////////////////////////// components /////////////////////////
+$component-bg-color:                          $white;
+$component-border-color:                      transparent;
+$component-border-width:                      0.0625rem; // 1px
+$component-border:                            $component-border-width solid $component-border-color;
 
-// button
-$button-font-size:              16px;
-$button-font-weight:            500; // medium
-$button-line-height:            24px;
-$button-font-color:             $light-black;
-$button-border:                 0.0625rem solid transparent;
-$button-bg-color:               transparent;
+// 컴포넌트 선택시
+$component-pressed-bg-color:                  rgba(135, 206, 255, 0.1);
+$component-pressed-border-color:              $light-blue;
+$move-handler-focus-color:                    $point-blue;
 
-// TODO: datepicker 변수 정리
-$datepicker-asset-path:         "../media/icons/datepicker";
+// 컴포넌트 readonly
+$component-disabled-font-color:               $gray;
+$component-disabled-bg-color:                 $light-gray;
 
-// dropzone
-$dropzone-folder-path:          "../media/icons/dropzone/";
-$dropzone-pressed-bg-color:     $white;
+// 컴포넌트 툴팁
+$component-tooltip-menu-focus-font-color:     $point-blue;
 
-// container
-$container-background-color:    $light-gray;
+// 컴포넌트 drag
+$component-drag-border-color:                 $point-blue;
+$component-drag-border-width:                 0.125rem; // 2px
+$component-drag-border:                       $component-drag-border-width dashed $component-drag-border-color;
 
-// container > header
-$header-font-size:             18px;
-$header-top-bottom-padding:    0.9375rem; // 15px
-$header-real-height:           $layout-header-height - ($header-top-bottom-padding * 2); // 25px
-$header-separator-color:       $white;
-$header-margin-right:          1.25rem; // 20px
-$header-name-font-size:        16px;
+// editbox 컴포넌트
+$editbox-font-size:                           $font-size-base;
+$editbox-font-weight:                         $font-weight-regular;
+$editbox-font-color:                          $gray;
+$editbox-pressed-font-color:                  $light-blue;
 
-// container > contents, properties > drawing-board
-$drawing-board-bg-color:        $white;
-$drawing-board-border:          0.0625rem solid $line-gray; // 1px
-$drawing-board-box-shadow:      0 0 0.9375rem 0 rgba(204, 206, 209, 0.3); // 흐림 15px,  $pressed-gray, 불투명도 30%;
+// image 컴포넌트
+$img-font-size:                               $font-size-base;
+$img-font-weight:                             $font-weight-regular;
+$img-font-color:                              $gray;
+$img-bg-color:                                $light-gray;
+$img-border:                                  0.0625rem solid $line-gray;
 
-// form
-$form-asset-path:               "../media/icons/form";
-$column-row:                    12;  // 폼을 나누는 갯수
+// 커스텀 코드 컴포넌트
+$custom-code-btn-font-color:                  $dark-gray;
 
-// container > contents > drawing-board
-$form-drawing-board-width:      59.38rem; // 950px
-$form-drawing-board-top-margin: 6.563rem; // 105px
-
-// container > properties
-$form-properties-bg-color:           $white;
-$form-properties-width:              18.75rem; // 300px
-$form-properties-box-shadow:         -0.0625rem 0.9375rem 0.4375rem 0 rgba(204, 206, 209, 0.6);// -1px 15px 7px 0px $pressed-gray, 불투명도 60%;
-
-// component
-$component-border:               0.0625rem solid transparent;
-$component-indent-padding-left:  10px; // 10px 컴포넌트 들여쓰기
-$component-bg-color:             $white;
-$component-pressed-border-color: $light-blue; // 컴포넌트 선택시
-$component-pressed-bg-color:     rgba(135, 206, 255, 0.1); // 컴포넌트 선택시
-$component-disabled-bg-color:    $light-gray;
-$component-disabled-font-color:  $gray;
-$component-move-handler-color:   $pressed-gray;
-
-// editbox component
-$editbox-font-size:              16px;
-$editbox-font-weight:            400; // regular
-$editbox-font-color:             $blue-gray;
-$editbox-pressed-color:          $light-blue;
-
-// context menu
-$context-menu-width:             11.88rem; // 190px 
-$context-menu-height:            14.06rem; // 225px
-$context-menu-bg-color:          $white;
-$context-menu-font-size:         0.875rem; // 14px
-$context-menu-font-color:        $dark-gray;
-$context-menu-border:            0.0625rem solid $line-gray; // 1px
-$context-menu-box-shadow:        0 0 0.3125rem 0 $line-gray; // 흐림 5px, $line-gray
-$context-menu-focus-bg-color:   rgba(135, 206, 255, 0.1);
-$context-menu-focus-font-color:  $point-blue;
-
-// properties title
-$properties-title-height:        2.5rem; // 40px
-$properties-title-bg-color:      $hover-blue;
-$properties-title-font-size:     16px;
-$properties-title-font-weight:   500; // medium
-$properties-title-line-height:   24px;
-$properties-title-font-color:    $white;
-
-// properties detail
-$properties-indent-padding-left:   0.438rem; // 7px input, select 등 들여쓰기
-$properties-border:              0.0625rem solid $line-gray; // 1px
-
-// color palette
-$properties-border-color:          #c8ced8; // default
-$properties-bg-color:              $white; // default
-
-$properties-active-font-color:     $point-blue; // 삭제 예정
-$properties-active-border-color:   $point-blue; // 삭제 예정
+////////////////////////// context menu /////////////////////////
+$context-menu-width:                          11.25rem; // 180px
+$context-menu-height:                         14.06rem; // 225px
+$context-menu-bg-color:                       $white;
+$context-menu-font-size:                      $font-size-base;
+$context-menu-font-color:                     $dark-gray;
+$context-menu-font-weight:                    $font-weight-regular;
+$context-menu-border:                         0.0625rem solid $line-gray; // 1px
+$context-menu-box-shadow:                     0 0 0.3125rem 0 $line-gray; // 흐림 5px, $line-gray
+$context-menu-focus-bg-color:                 rgba(135, 206, 255, 0.1);
+$context-menu-focus-font-color:               $point-blue;
 
 // document
 // container > contents > button-board, drawing-board
 $document-content-drawing-board-width:  61.56rem; // 985px
 $document-content-drawing-board-top-margin: 6.563rem; // 105px
-
-$image-folder-path: "../media/images/";
