--- a/src/main/resources/public/src/scss/template/_date-picker.scss
+++ b/src/main/resources/public/src/scss/template/_date-picker.scss
@@ -178,7 +178,7 @@
         }
 
         .digit {
-          width: 3.75rem; // 60px
+          width: 3.75rem !important; // 60px
           height: 3.75rem; // 60px
           font-size: $datepicker-time-font-size;
           font-weight: $font-weight-medium;
