#9089 [SCSS] view-template 믹스인 수정
- 중복 영역 수정 / 불필요 코드 제거
- header 디자인 추가 수정

--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -62,3 +62,125 @@
     scrollbar-width: none; /* Firefox */
     &::-webkit-scrollbar { display: none; /* Chrome, Safari, Opera*/ }
 }
+
+@mixin content-header() {
+    .header {
+        padding: 3.1875rem 3.75rem 3.1875rem 3.75rem; // 51px 60px 51px 60px
+        background: $light-gray;
+        border-bottom: 0.0625rem solid $line-gray;
+    }
+}
+
+// 조회화면 템플릿
+@mixin view-template() {
+  .flex {
+    padding: 3.125rem 19.375rem 9.315rem 19.375rem; // 50px 310px 150px 310px
+    background-color: $white;
+    display: flex;
+    flex-grow: 1;
+    height: calc(100vh - 10.375rem);
+    &.flex-column {
+      flex-direction: column;
+    }
+    &.flex-row {
+      flex-direction: row;
+    }
+    .flex-item {
+      display: flex;
+      &.item-text {
+        min-height: 13.4375rem; // 215px
+        padding: 0.3125rem 1.25rem; // 5px 20px
+        margin-bottom: 0.75rem; // 12px
+        span {
+          margin: 0;
+          white-space: normal;
+          word-break: normal;
+        }
+      }
+    }
+  }
+}
+
+// 입력 및 수정화면 템플릿
+@mixin edit-template() {
+  background-color: white;
+  @include content-header();
+  .edit {
+    padding-top: 3.125rem; // 50px
+    width: 61.25rem; // 980px
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    & .scroll-wrap {
+      height: 43.125rem; // 690px
+      display: flex;
+      flex-direction: column;
+      .form-wrap {
+        flex: 1;
+        overflow: auto;
+        padding: 0 1.875rem 0 4.0625rem; // 0 30px 0 65px
+      }
+    }
+    .table-set {
+      margin-top: 0.6875rem;
+      height: 28.125rem; // 450px
+      overflow: auto;
+      thead tr {
+        border-bottom: 0.125rem solid #E1E3E6;
+      }
+      tr {
+        height: 2.5rem; // 40px
+      }
+      th {
+        font-weight: 500;
+        padding: 1rem; // 16px
+        vertical-align: middle;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      td {
+        padding: 0.75rem 0.75rem 0 0; // 6px 6px 0 0
+      }
+    }
+    .form-set {
+      display: flex;
+      flex-direction: column;
+      margin-top: 0.6875rem; // 11px
+      li {
+        color: $dark-gray;
+        font-weight: 400;
+        height: 1.5rem; // 24px
+      }
+      label {
+        font-weight: 500;
+        margin-left: 1.25rem; // 20px
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+      .checkbox-list {
+        height: 13.5rem; // 216px
+        border: 0.0625rem solid $element-border-color; // 1px
+        border-radius: $element-border-radius;
+        overflow-y: auto;
+        padding: 0.5rem 0.625rem; // 8px 10px
+      }
+      .radio-list {
+        height: 27rem;
+        border: 0.0625rem solid $element-border-color; // 1px
+        border-radius: $element-border-radius;
+        overflow-y: auto;
+        padding: 0.5rem 0.625rem; // 8px 10px
+      }
+      .text-editor {
+        height: 12.5rem; // 200px
+      }
+      .label-row {
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+}
