--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-tree-edit.scss
@@ -34,7 +34,7 @@
         }
         .form-row {
             display: flex;
-            flex-flow: row wrap;
+            flex-flow: wrap;
             justify-content: space-between;
             .form-div {
                 width: 49%;
