--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="portal-search-container">
+    <div class="portal-search-header">
         <div class="page-title">
             <h1 th:text="#{download.label.list}"></h1>
             <h6 class="description" th:text="#{download.msg.portalDescription}"></h6>
