--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-view">
+    <div class="contents-flex scroll-wrap">
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{download.label.download}"></h1>
                 <h6 class="title-description" th:text="#{download.msg.portalDescription}"></h6>
             </div>
         </div>
-        <div class="view">
+        <div class="flex flex-column">
             <h4 class="under-bar" th:text="#{${download.downloadTitle}}"></h4>
             <div class="row-right">
                 <span id="spanCreateDt" th:text="${download?.createDt}"></span>
@@ -23,7 +23,7 @@
                 <span class="user-name" th:text="${download?.createUserName}"></span>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="view-text">
+            <div class="flex-item item-text">
                 <h5 th:text="#{download.label.category}"></h5>
                 <span th:text="#{${download.downloadCategory}}"></span>
             </div>
