--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-view">
+    <div class="contents-flex scroll-wrap">
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{faq.label.faq}"></h1>
                 <h6 class="title-description" th:text="#{faq.label.description}"></h6>
             </div>
         </div>
-        <div class="view">
+        <div class="flex flex-column">
             <h4 class="under-bar" th:text="${faq?.faqTitle}"></h4>
             <div class="row-right">
                 <span id="spanCreateDt" th:text="${faq?.createDt}"></span>
@@ -23,7 +23,7 @@
                 <span class="user-name" th:text="${faq?.createUserName}"></span>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="view-text">
+            <div class="flex-item item-text">
                 <pre><span th:text="${faq?.faqContent}"/></pre>
             </div>
             <div class="horizontal-bar"></div>
