--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/defaultLayout">
 <head>
     <title th:text="#{notice.label.view}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-view">
+    <div class="contents-flex scroll-wrap">
         <div class="header">
             <div class="page-title">
                 <h1 th:text="#{notice.label.list}"></h1>
                 <h6 class="title-description" th:text="#{notice.msg.viewDescription}"></h6>
             </div>
         </div>
-        <div class="view">
+        <div class="flex flex-column">
             <h4 class="under-bar" th:text="${notice?.noticeTitle}"></h4>
             <div class="row-right">
                 <span id="spanCreateDt" th:text="${notice.createDt}"></span>
@@ -23,7 +23,7 @@
                 <span class="user-name" id="spanUserName" th:text="${notice?.aliceUserEntity.userName}"></span>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="view-text">
+            <div class="flex-item item-text">
                 <pre><span th:text="${notice?.noticeContents}"/></pre>
             </div>
             <div class="horizontal-bar"></div>
