--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="portal-search-container">
+    <div class="portal-search-header">
         <div class="contents-view">
             <div class="page-title">
                 <h1 th:text="#{download.label.download}"></h1>
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="portal-search-view">
-        <div class="view">
+        <div class="flex flex-column">
             <h4 class="under-bar" th:text="#{${download.downloadTitle}}"></h4>
             <div class="row-right">
                 <span id="spanCreateDt" th:text="${download?.createDt}"></span>
@@ -25,7 +25,7 @@
                 <span th:text="${download?.createUserName}"></span>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="view-text">
+            <div class="flex-item item-text">
                 <h5 th:text="#{download.label.category}"></h5>
                 <span th:text="#{${download.downloadCategory}}"></span>
             </div>
